--- a/app/password-input/dev/page.mdx
+++ b/app/password-input/dev/page.mdx
@@ -131,21 +131,10 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ### `<PasswordInput />`
 
-| **Prop**                   | **Type**                       | **Default** | **Description**                      |
-| -------------------------- | ------------------------------ | ----------- | ------------------------------------ |
-| **value**                  | string                         |             | Controlled value                     |
-| **onChange**               | function (event)               |             | Callback when value changes          |
-| **placeholder**            | string                         |             | Placeholder text                     |
-| **disabled**               | boolean                        | _false_     | Disable the input                    |
-| **readOnly**               | boolean                        | _false_     | Read-only input                      |
-| **error**                  | boolean                        | _false_     | Error state                          |
-| **size**                   | 'sm' \| 'md'                   | _'md'_      | Input size                           |
-| **floatingLabel**          | string \| ReactNode            |             | Floating label                       |
-| **leftIcon**               | ReactNode                      |             | Icon on the left                     |
-| **clearButton**            | boolean                        | _false_     | Show clear button                    |
-| **toggleVisibilityButton** | boolean                        | _true_      | Show/hide password visibility button |
-| **...InputProps**          | [See Input](../base-input/dev) |             | Inherits all props from **Input**    |
+| **Prop**          | **Type**                       | **Default** | **Description**                   |
+| ----------------- | ------------------------------ | ----------- | --------------------------------- |
+| **color**         | 'accent' \| 'neutral'          | _'neutral'_ | Màu của biểu tượng mắt (eye icon) |
+| **defaultHidden** | boolean                        | _true_      | Ẩn mật khẩu theo mặc định         |
+| **...InputProps** | [Xem Input](../base-input/dev) |             | Kế thừa tất cả props từ **Input** |
 
-> **_Note:_** _PasswordInput_ **inherits** all props from **Input** and the native **input[type=password]** element. See [Input documentation](../base-input/dev) for full details on available props and tokens.\_
-
----
+> **_Lưu ý:_** _PasswordInput_ kế thừa tất cả props từ **Input** và native **input[type=password]**. Xem [Input documentation](../base-input/dev) để biết chi tiết đầy đủ về các props và tokens.
