--- a/app/radio/dev/page.mdx
+++ b/app/radio/dev/page.mdx
@@ -51,18 +51,36 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ### `<Radio />`
 
-| **Prop**              | **Type**                       | **Default** | **Description**                   |
-| --------------------- | ------------------------------ | ----------- | --------------------------------- |
-| **checked**           | boolean                        |             | Checked state                     |
-| **onChange**          | function (event)               |             | Callback when value changes       |
-| **value**             | string \| number               |             | Value of the radio                |
-| **label**             | string \| ReactNode            |             | Label for the radio               |
-| **sublabel**          | string \| ReactNode            |             | Sublabel for the radio            |
-| **disabled**          | boolean                        | _false_     | Disable the radio                 |
-| **color**             | string                         |             | Radio color                       |
-| **radioWrapperProps** | any                            |             | Props for the radio wrapper       |
-| **...InputProps**     | [See Input](../base-input/dev) |             | Inherits all props from **Input** |
+| **Prop**              | **Type**                       | **Default** | **Description**                                                |
+| --------------------- | ------------------------------ | ----------- | -------------------------------------------------------------- |
+| **checked**           | boolean                        |             | Checked state (controlled)                                     |
+| **onChange**          | function (event)               |             | Callback when radio value changes                              |
+| **value**             | string \| number               |             | Value of the radio                                             |
+| **label**             | string \| ReactNode            |             | Label for the radio                                            |
+| **sublabel**          | string \| ReactNode            |             | Sublabel for the radio                                         |
+| **disabled**          | boolean                        | false       | Disable the radio                                              |
+| **color**             | 'neutral' \| 'accent'          | 'neutral'   | Radio color theme                                              |
+| **radioWrapperProps** | any                            |             | Props for the radio wrapper                                    |
+| **...InputProps**     | [See Input](../base-input/dev) |             | Inherits all props from **Input** and native input[type=radio] |
 
 > **_Note:_** _Radio_ **inherits** all props from **Input** and the native **input[type=radio]** element. See [Input documentation](../base-input/dev) for full details on available props and tokens.
+
+## RadioGroup API Reference
+
+### `<RadioGroup />`
+
+| **Prop**         | **Type**                           | **Default** | **Description**                                   |
+| ---------------- | ---------------------------------- | ----------- | ------------------------------------------------- |
+| **name**         | string                             |             | Name for all radios in the group (required)       |
+| **label**        | string \| ReactNode                |             | Label for the radio group                         |
+| **defaultValue** | string \| number                   |             | Default value (uncontrolled)                      |
+| **value**        | string \| number                   |             | Value of the selected radio (controlled)          |
+| **disabled**     | boolean                            | false       | Disable all radios in the group                   |
+| **color**        | 'neutral' \| 'accent'              | 'neutral'   | Color theme for all radios                        |
+| **items**        | RadioProps[]                       |             | Array of radio item props to auto-generate radios |
+| **onChange**     | function (value: string \| number) |             | Callback when selected value changes              |
+| **children**     | ReactNode                          |             | Custom radio elements as children                 |
+
+> **_Note:_** _RadioGroup_ can generate radios from the `items` array or accept custom `<Radio />` children. It controls the `name`, `checked`, and `onChange` props for its radios.
 
 ---
